# BigData

./: README.md
DataPipeline/: README.md  tcph_dag.py
DataPipeline/configs/: customer.yaml  lineitem.yaml  orders.yaml  part.yaml  supplier.yaml
DataPipeline/ddl/: customer.sql  lineitem.sql  orders.sql  part.sql  supplier.sql
DataPipeline/spark_modules/: spark_runner.py  utils.py
DataPipeline/utils/: pipeline_utils.py
Hadoop/Hive/: README.md  query.sql
Hadoop/MapReduce/: Makefile  README.md  mapper.py  reducer.py  result.csv  run.sh
Kafka/: .env  README.md  docker-compose.yml  environment.sh  producer.py  requirements.txt  run.sh  spark_streaming.py
MLflow/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yaml  experiment.py  pyproject.toml
ModelsControl/: .env  README.md  driver_classification.py  pyproject.toml
PySpark/: README.md  requirements.txt  spark_runner.py
SparkML/: README.md  bot_detection.py  scoring.py
